--- a/src/styles/productDetailStyle.css
+++ b/src/styles/productDetailStyle.css
@@ -29,3 +29,17 @@
   
   
   }
+*{
+ font-family: 'Poppins', sans-serif;;
+}
+.font-title {
+  font-family: 'Playfair Display', serif;
+}
+.font-description {
+  font-family: 'Montserrat', sans-serif;
+
+}
+.yellow-color  {
+
+
+}
